--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "devDependencies": {
     "defence-cli": "^2.0.1",
-    "replace-require-self": "^1.1.1"
+    "replace-require-self": "^1.1.1",
+    "standard": "^10.0.3",
+    "standard-markdown": "^4.0.2"
   },
   "scripts": {
-    "test": "defence -i javascript README.md | replace-require-self | node"
+    "test": "defence -i javascript README.md | replace-require-self | node",
+    "lint": "standard && standard-markdown"
   }
 }
