--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "json-parse-errback": "^2.0.1",
+    "once": "^1.4.0",
     "simple-concat": "^1.0.0"
   },
   "devDependencies": {
