--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "commonform-get-editions",
-  "version": "2.0.0",
-  "description": "fetch available editions of a Common Form publication",
+  "name": "commonform-get-versions",
+  "version": "1.0.0",
+  "description": "fetch available versions of a Common Form component",
   "author": "Kyle E. Mitchell <kyle@kemitchell.com> (https://kemitchell.com/)",
-  "repository": "commonform/commonform-get-editions",
+  "repository": "commonform/commonform-get-versions",
   "license": "BlueOak-1.0.0",
   "dependencies": {
     "json-parse-errback": "^2.0.1",
